--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 # Project exclude paths
 /lesson/node_modules/
 /lesson2-4/node_modules/
+/lesson3-1a/node_modules/
+/lesson3-1b/node_modules/
+/lesson3-3/node_modules/
+/lesson3-4/node_modules/
+/lesson3-4/node_modules/
