--- a/lesson3-12/package.json
+++ b/lesson3-12/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "test": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +15,6 @@
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.6.3",
-    "@babel/runtime": "^7.6.3",
-    "@babel/runtime-corejs2": "^7.6.3",
     "autoprefixer": "^9.6.4",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
@@ -32,5 +31,9 @@
     "webpack-cli": "^3.3.9",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.8.2"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.6.3",
+    "@babel/runtime-corejs2": "^7.6.3"
   }
 }
