--- a/lesson3-12/package.json
+++ b/lesson3-12/package.json
@@ -32,5 +32,9 @@
     "webpack-cli": "^3.3.9",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.8.2"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.6.3",
+    "@babel/runtime-corejs2": "^7.6.3"
   }
 }
