--- a/lesson4-4/package.json
+++ b/lesson4-4/package.json
@@ -5,8 +5,9 @@
   "description": "",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server",
-    "test": "webpack"
+    "dev-build": "webpack --config ./build/webpack.dev.js",
+    "dev": "webpack-dev-server --config ./build/webpack.dev.js",
+    "build": "webpack --config ./build/webpack.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -32,11 +33,13 @@
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-middleware": "^3.7.2",
-    "webpack-dev-server": "^3.8.2"
+    "webpack-dev-server": "^3.8.2",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.6.3",
     "@babel/runtime-corejs2": "^7.6.3",
+    "lodash": "^4.17.15",
     "react": "^16.10.2",
     "react-dom": "^16.10.2"
   }
