--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Project exclude paths
-/.vscode
-/.history
+/.vscode/
+/.history/
 /node_modules/
 /lesson/node_modules/
 /lesson2-4/node_modules/
@@ -23,3 +23,4 @@
 /lesson6-1/node_modules/
 /lesson6-2/node_modules/
 /lesson6-3/node_modules/
+/.history/
